# cpp-con-2024

./: .npmignore  CMakeLists.txt  README.md  gulpfile.js  index.html  main.cpp  my_server.py  package-lock.json  package.json  pnpm-lock.yaml  template.html
code/: CMakeLists.txt  FFK.cmake  forwardKinematicsLib.cpp  forwardKinematicsTest.cpp  godbolt.asm  godboltO3.asm  inverseKinematicsTest.cpp  robot.urdf  robotConfig.template  robotGen.py
css/: reveal.scss
css/theme/template/: theme.scss
plugin/highlight/: highlight.esm.js  highlight.js  monokai.css  plugin.js
